# chatgpt-api-rs

./: Cargo.toml  README.md
docs/: CHANGELOH.md
src/: chat_completion.rs  completion.rs  error.rs  lib.rs
