[package]
name = "chatgpt-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_api_client="0.5.0"
reqwest = {version="0.11.14",features = ["socks", "json"] }
#reqwest = {version="0.11.14",features = [ "json"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
actix-rt = "2.7.0"
thiserror = "1.0.37"