[package]
name = "openai-chat"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license="MIT"
description="chatgpt api"
keywords = ["openai","api","chatgpt"]
documentation = "https://docs.rs/chatgpt_api/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/dobefore/chatgpt-api-rs"

[dependencies]
openai_api_client="0.5.0"
reqwest = {version="0.11.14",features = ["socks", "json"] }
#reqwest = {version="0.11.14",features = [ "json"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
actix-rt = "2.7.0"
thiserror = "1.0.37"